[gd_scene load_steps=43 format=3 uid="uid://dnxcnkq33v37s"]

[ext_resource type="Script" uid="uid://0rf0vdc4yyj2" path="res://scenes/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ctk5fxj46grrv" path="res://Assets/Character Sprites/Rat Player/Idle_000.png" id="2_jej6c"]
[ext_resource type="Texture2D" uid="uid://t1ljrmvq514o" path="res://Assets/Character Sprites/Rat Player/Idle_001.png" id="3_f1ej7"]
[ext_resource type="Texture2D" uid="uid://cnbu5x2kekpjn" path="res://Assets/Character Sprites/Rat Player/Idle_002.png" id="4_oprun"]
[ext_resource type="Texture2D" uid="uid://eo3hvt010iqd" path="res://Assets/Character Sprites/Rat Player/Idle_003.png" id="5_a8ls1"]
[ext_resource type="Texture2D" uid="uid://dk3r68yyvgag2" path="res://Assets/Character Sprites/Rat Player/Idle_004.png" id="6_qfm1y"]
[ext_resource type="Texture2D" uid="uid://degsrfe18g03o" path="res://Assets/Character Sprites/Rat Player/Idle_005.png" id="7_fulsm"]
[ext_resource type="Texture2D" uid="uid://dgdna8edta3gb" path="res://Assets/Character Sprites/Rat Player/Idle_006.png" id="8_4r5pv"]
[ext_resource type="Texture2D" uid="uid://vnjjrvs7pasl" path="res://Assets/Character Sprites/Rat Player/Idle_007.png" id="9_60mlk"]
[ext_resource type="Texture2D" uid="uid://0ug8ndp5lhgu" path="res://Assets/Character Sprites/Rat Player/Idle_008.png" id="10_i4ail"]
[ext_resource type="Texture2D" uid="uid://feg4v6fc2yyu" path="res://Assets/Character Sprites/Rat Player/Idle_009.png" id="11_a38lo"]
[ext_resource type="Texture2D" uid="uid://tnbd4xuxyh54" path="res://Assets/Character Sprites/Rat Player/Idle_010.png" id="12_4ni07"]
[ext_resource type="Texture2D" uid="uid://dvsl7iqjvwbcx" path="res://Assets/Character Sprites/Rat Player/Idle_011.png" id="13_l71n6"]
[ext_resource type="Texture2D" uid="uid://ovuutai3rqa7" path="res://Assets/Character Sprites/Rat Player/Jump_000.png" id="14_cs1tg"]
[ext_resource type="Texture2D" uid="uid://ff50tqcql7lx" path="res://Assets/Elements/Elemets , Bullets, Etc/Apple.png" id="14_f1ej7"]
[ext_resource type="Texture2D" uid="uid://7jh8cy78c0k5" path="res://Assets/Character Sprites/Rat Player/Jump_001.png" id="15_2dvfe"]
[ext_resource type="Texture2D" uid="uid://bwig73lxs5gw8" path="res://Assets/Character Sprites/Rat Player/Jump_002.png" id="16_giy8y"]
[ext_resource type="Texture2D" uid="uid://br7k3y3ufa71h" path="res://Assets/Character Sprites/Rat Player/Jump_003.png" id="17_fdfoy"]
[ext_resource type="Texture2D" uid="uid://dtvcjk44pl0ll" path="res://Assets/Character Sprites/Rat Player/Jump_004.png" id="18_hhpqf"]
[ext_resource type="Texture2D" uid="uid://bqr63qffdsjq0" path="res://Assets/Character Sprites/Rat Player/Jump_005.png" id="19_g5jhy"]
[ext_resource type="Texture2D" uid="uid://bedirk47eoum3" path="res://Assets/Character Sprites/Rat Player/Jump_006.png" id="20_holxr"]
[ext_resource type="Texture2D" uid="uid://w0eq4o5ew4l8" path="res://Assets/Character Sprites/Rat Player/Jump_007.png" id="21_mx1m4"]
[ext_resource type="Texture2D" uid="uid://c8dj3co0ojjb4" path="res://Assets/Character Sprites/Rat Player/Run_000.png" id="22_4gjji"]
[ext_resource type="Texture2D" uid="uid://cwxrcxhuq78by" path="res://Assets/Character Sprites/Rat Player/Run_001.png" id="23_u2ulf"]
[ext_resource type="Texture2D" uid="uid://c1mlsasddww7g" path="res://Assets/Character Sprites/Rat Player/Run_002.png" id="24_6e8lb"]
[ext_resource type="Texture2D" uid="uid://clwgsnotf3yt5" path="res://Assets/Character Sprites/Rat Player/Run_003.png" id="25_2gdjj"]
[ext_resource type="Texture2D" uid="uid://b7cf08yf88s4t" path="res://Assets/Character Sprites/Rat Player/Run_004.png" id="26_sc3ue"]
[ext_resource type="Texture2D" uid="uid://csbc3x4x32ejb" path="res://Assets/Character Sprites/Rat Player/Run_005.png" id="27_lxlsd"]
[ext_resource type="Texture2D" uid="uid://mj72umcumjcr" path="res://Assets/Character Sprites/Rat Player/Run_006.png" id="28_ha2mi"]
[ext_resource type="Texture2D" uid="uid://crkyl4mmtktse" path="res://Assets/Character Sprites/Rat Player/Run_007.png" id="29_apa73"]
[ext_resource type="Texture2D" uid="uid://6cmyg8omw5xn" path="res://Assets/Character Sprites/Rat Player/Walk_000.png" id="30_74r1k"]
[ext_resource type="Texture2D" uid="uid://cewgk5l6on0ns" path="res://Assets/Character Sprites/Rat Player/Walk_001.png" id="31_8svfe"]
[ext_resource type="Texture2D" uid="uid://5yth5ahh3nnd" path="res://Assets/Character Sprites/Rat Player/Walk_002.png" id="32_2a3c5"]
[ext_resource type="Texture2D" uid="uid://ydg352bwqcps" path="res://Assets/Character Sprites/Rat Player/Walk_003.png" id="33_42b1b"]
[ext_resource type="Texture2D" uid="uid://d15x4spy8n8vf" path="res://Assets/Character Sprites/Rat Player/Walk_004.png" id="34_h7ic4"]
[ext_resource type="Texture2D" uid="uid://cauo0tlspa3g0" path="res://Assets/Character Sprites/Rat Player/Walk_005.png" id="35_au7lq"]
[ext_resource type="Texture2D" uid="uid://cu3kfevr1emnk" path="res://Assets/Character Sprites/Rat Player/Walk_006.png" id="36_nubpm"]
[ext_resource type="Texture2D" uid="uid://bsnurjhspguxq" path="res://Assets/Character Sprites/Rat Player/Walk_007.png" id="37_ua5cf"]
[ext_resource type="Texture2D" uid="uid://b8274yxwer1kc" path="res://Assets/Character Sprites/Rat Player/Walk_008.png" id="38_51ujp"]
[ext_resource type="Texture2D" uid="uid://ce5gum27p54ih" path="res://Assets/Character Sprites/Rat Player/Walk_009.png" id="39_tk41t"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ke2ow"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jej6c")
}, {
"duration": 1.0,
"texture": ExtResource("3_f1ej7")
}, {
"duration": 1.0,
"texture": ExtResource("4_oprun")
}, {
"duration": 1.0,
"texture": ExtResource("5_a8ls1")
}, {
"duration": 1.0,
"texture": ExtResource("6_qfm1y")
}, {
"duration": 1.0,
"texture": ExtResource("7_fulsm")
}, {
"duration": 1.0,
"texture": ExtResource("8_4r5pv")
}, {
"duration": 1.0,
"texture": ExtResource("9_60mlk")
}, {
"duration": 1.0,
"texture": ExtResource("10_i4ail")
}, {
"duration": 1.0,
"texture": ExtResource("11_a38lo")
}, {
"duration": 1.0,
"texture": ExtResource("12_4ni07")
}, {
"duration": 1.0,
"texture": ExtResource("13_l71n6")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_cs1tg")
}, {
"duration": 1.0,
"texture": ExtResource("15_2dvfe")
}, {
"duration": 1.0,
"texture": ExtResource("16_giy8y")
}, {
"duration": 1.0,
"texture": ExtResource("17_fdfoy")
}, {
"duration": 1.0,
"texture": ExtResource("18_hhpqf")
}, {
"duration": 1.0,
"texture": ExtResource("19_g5jhy")
}, {
"duration": 1.0,
"texture": ExtResource("20_holxr")
}, {
"duration": 1.0,
"texture": ExtResource("21_mx1m4")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_4gjji")
}, {
"duration": 1.0,
"texture": ExtResource("23_u2ulf")
}, {
"duration": 1.0,
"texture": ExtResource("24_6e8lb")
}, {
"duration": 1.0,
"texture": ExtResource("25_2gdjj")
}, {
"duration": 1.0,
"texture": ExtResource("26_sc3ue")
}, {
"duration": 1.0,
"texture": ExtResource("27_lxlsd")
}, {
"duration": 1.0,
"texture": ExtResource("28_ha2mi")
}, {
"duration": 1.0,
"texture": ExtResource("29_apa73")
}],
"loop": true,
"name": &"running",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_74r1k")
}, {
"duration": 1.0,
"texture": ExtResource("31_8svfe")
}, {
"duration": 1.0,
"texture": ExtResource("32_2a3c5")
}, {
"duration": 1.0,
"texture": ExtResource("33_42b1b")
}, {
"duration": 1.0,
"texture": ExtResource("34_h7ic4")
}, {
"duration": 1.0,
"texture": ExtResource("35_au7lq")
}, {
"duration": 1.0,
"texture": ExtResource("36_nubpm")
}, {
"duration": 1.0,
"texture": ExtResource("37_ua5cf")
}, {
"duration": 1.0,
"texture": ExtResource("38_51ujp")
}, {
"duration": 1.0,
"texture": ExtResource("39_tk41t")
}],
"loop": true,
"name": &"walking",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jej6c"]
radius = 55.0
height = 330.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("player_animation", "weapon_sprite") groups=["Player"]]
script = ExtResource("1")
player_animation = NodePath("AnimatedSprite2D")
weapon_sprite = NodePath("RotPoint/weapon_sprite")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_ke2ow")
animation = &"jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 13)
scale = Vector2(0.2, 0.2)
shape = SubResource("CapsuleShape2D_jej6c")

[node name="RotPoint" type="Marker2D" parent="."]
position = Vector2(-9, 27)

[node name="weapon_sprite" type="Sprite2D" parent="RotPoint"]
position = Vector2(6, -2)
scale = Vector2(0.2, 0.2)
texture = ExtResource("14_f1ej7")
offset = Vector2(0, -65)

[node name="ShootPoint" type="Marker2D" parent="RotPoint"]
position = Vector2(17, 0)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, -7)
